--- a/app/src/main/res/layout/activity_brooklyn_bridge_park_info.xml
+++ b/app/src/main/res/layout/activity_brooklyn_bridge_park_info.xml
@@ -19,6 +19,9 @@ tools:context="com.example.jay.tourguideapp.BrooklynBridgeParkInfo">
     android:text="@string/description_Brooklyn_Bridge_Park"
     android:textSize="24sp"
     android:textColor="#FFFFFF"
+    android:paddingBottom="8dp"
+    android:paddingTop="8dp"
+    android:paddingLeft="8dp"
     android:fontFamily="sans-serif"
     android:background="@color/colorPrimaryDark"/>
 
