--- a/app/src/main/res/layout/activity_central_park_info.xml
+++ b/app/src/main/res/layout/activity_central_park_info.xml
@@ -19,6 +19,9 @@
         android:text="@string/description_Central_park"
         android:textSize="24sp"
         android:textColor="#FFFFFF"
+        android:paddingBottom="8dp"
+        android:paddingTop="8dp"
+        android:paddingLeft="8dp"
         android:fontFamily="sans-serif"
         android:background="@color/colorPrimaryDark"/>
 
