--- a/app/src/main/res/layout/activity_high_line_park_info.xml
+++ b/app/src/main/res/layout/activity_high_line_park_info.xml
@@ -12,14 +12,23 @@
         android:layout_height="372dp"
         android:background="@drawable/the_high_line_park"/>
 
-    <TextView
-        android:id="@+id/addressTextView"
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/descrition_High_Line"
-        android:textSize="24sp"
-        android:textColor="#FFFFFF"
-        android:fontFamily="sans-serif"
-        android:background="@color/colorPrimaryDark"/>
+        android:background="@color/colorPrimaryDark">
+
+        <TextView
+            android:id="@+id/addressTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif"
+            android:paddingBottom="8dp"
+            android:paddingTop="8dp"
+            android:paddingLeft="8dp"
+            android:text="@string/description_High_Line"
+            android:textColor="#FFFFFF"
+            android:textSize="24sp" />
+
+    </ScrollView>
 
 </LinearLayout>
