--- a/app/src/main/res/layout/activity_hills_park_info.xml
+++ b/app/src/main/res/layout/activity_hills_park_info.xml
@@ -21,6 +21,9 @@
             android:layout_height="wrap_content"
             android:background="@color/colorPrimaryDark"
             android:fontFamily="sans-serif"
+            android:paddingBottom="8dp"
+            android:paddingTop="8dp"
+            android:paddingLeft="8dp"
             android:text="@string/description_Hills_Park"
             android:textColor="#FFFFFF"
             android:textSize="24sp" />
