--- a/app/src/main/res/layout/activity_ichiran_info.xml
+++ b/app/src/main/res/layout/activity_ichiran_info.xml
@@ -16,11 +16,29 @@
     <TextView
         android:id="@+id/addressTextView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:text="@string/address_restaurant_Ichiran"
         android:textSize="24sp"
         android:textColor="#FFFFFF"
-        android:fontFamily="sans-serif"
-        android:background="@color/colorPrimaryDark" />
+        android:paddingBottom="8dp"
+        android:paddingTop="8dp"
+        android:paddingLeft="8dp"
+        android:fontFamily="sans-serif"/>
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textSize="24sp"
+            android:textColor="#FFFFFF"
+            android:paddingBottom="8dp"
+            android:paddingTop="8dp"
+            android:paddingLeft="8dp"
+            android:fontFamily="sans-serif"
+            android:text="@string/description_Ichiran"/>
+    </ScrollView>
 
 </LinearLayout>
