--- a/app/src/main/res/layout/activity_museum_modern_art_info.xml
+++ b/app/src/main/res/layout/activity_museum_modern_art_info.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/colorPrimaryDark"
     android:orientation="vertical"
     tools:context="com.example.jay.tourguideapp.MuseumModernArtInfo">
 
@@ -15,11 +16,30 @@
     <TextView
         android:id="@+id/addressTextView"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:text="@string/address_arts_Modern_Art"
         android:textSize="24sp"
         android:textColor="#FFFFFF"
-        android:fontFamily="sans-serif"
-        android:background="@color/colorPrimaryDark"/>
+        android:paddingBottom="8dp"
+        android:paddingTop="8dp"
+        android:paddingLeft="8dp"
+        android:fontFamily="sans-serif"/>
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/description_Museum_Art"
+            android:textSize="24sp"
+            android:textColor="#FFFFFF"
+            android:paddingBottom="8dp"
+            android:paddingTop="8dp"
+            android:paddingLeft="8dp"
+            android:fontFamily="sans-serif"/>
+    </ScrollView>
+
 
 </LinearLayout>
