--- a/app/src/main/res/layout/activity_high_line_park_info.xml
+++ b/app/src/main/res/layout/activity_high_line_park_info.xml
@@ -26,7 +26,7 @@
             android:paddingTop="8dp"
             android:paddingLeft="8dp"
             android:text="@string/description_High_Line"
-            android:textColor="#FFFFFF"
+            android:textColor="@color/colorWhite"
             android:textSize="24sp" />
 
     </ScrollView>
