--- a/app/src/main/res/layout/activity_ichiran_info.xml
+++ b/app/src/main/res/layout/activity_ichiran_info.xml
@@ -19,7 +19,7 @@
         android:layout_height="wrap_content"
         android:text="@string/address_restaurant_Ichiran"
         android:textSize="24sp"
-        android:textColor="#FFFFFF"
+        android:textColor="@color/colorWhite"
         android:paddingBottom="8dp"
         android:paddingTop="8dp"
         android:paddingLeft="8dp"
@@ -33,7 +33,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="24sp"
-            android:textColor="#FFFFFF"
+            android:textColor="@color/colorWhite"
             android:paddingBottom="8dp"
             android:paddingTop="8dp"
             android:paddingLeft="8dp"
