--- a/app/src/main/res/layout/activity_brooklyn_bridge_info.xml
+++ b/app/src/main/res/layout/activity_brooklyn_bridge_info.xml
@@ -25,7 +25,7 @@
             android:paddingTop="8dp"
             android:paddingLeft="8dp"
             android:text="@string/description_Brooklyn_Bridge"
-            android:textColor="#FFFFFF"
+            android:textColor="@color/colorWhite"
             android:textSize="24sp" />
 
     </ScrollView>
