--- a/app/src/main/res/layout/activity_brooklyn_bridge_park_info.xml
+++ b/app/src/main/res/layout/activity_brooklyn_bridge_park_info.xml
@@ -1,28 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-xmlns:android="http://schemas.android.com/apk/res/android"
-xmlns:tools="http://schemas.android.com/tools"
-android:layout_width="match_parent"
-android:layout_height="match_parent"
-android:orientation="vertical"
-tools:context="com.example.jay.tourguideapp.BrooklynBridgeParkInfo">
-
-<ImageView
-    android:layout_width="match_parent"
-    android:layout_height="372dp"
-    android:background="@drawable/brooklyn_bridge_park"/>
-
-<TextView
-    android:id="@+id/addressTextView"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:text="@string/description_Brooklyn_Bridge_Park"
-    android:textSize="24sp"
-    android:textColor="#FFFFFF"
-    android:paddingBottom="8dp"
-    android:paddingTop="8dp"
-    android:paddingLeft="8dp"
-    android:fontFamily="sans-serif"
-    android:background="@color/colorPrimaryDark"/>
+    android:orientation="vertical"
+    tools:context="com.example.jay.tourguideapp.BrooklynBridgeParkInfo">
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="372dp"
+        android:background="@drawable/brooklyn_bridge_park" />
+
+    <TextView
+        android:id="@+id/addressTextView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/colorPrimaryDark"
+        android:fontFamily="sans-serif"
+        android:paddingBottom="8dp"
+        android:paddingLeft="8dp"
+        android:paddingTop="8dp"
+        android:text="@string/description_Brooklyn_Bridge_Park"
+        android:textColor="@color/colorWhite"
+        android:textSize="24sp" />
 
 </LinearLayout>
