--- a/app/src/main/res/layout/activity_joes_pizza_info.xml
+++ b/app/src/main/res/layout/activity_joes_pizza_info.xml
@@ -20,7 +20,7 @@
         android:layout_height="wrap_content"
         android:text="@string/address_restaurant_Joes"
         android:textSize="24sp"
-        android:textColor="#FFFFFF"
+        android:textColor="@color/colorWhite"
         android:paddingBottom="8dp"
         android:paddingTop="8dp"
         android:paddingLeft="8dp"
@@ -34,7 +34,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="24sp"
-            android:textColor="#FFFFFF"
+            android:textColor="@color/colorWhite"
             android:paddingBottom="8dp"
             android:paddingTop="8dp"
             android:paddingLeft="8dp"
