--- a/app/src/main/res/layout/activity_new_wonjo_info.xml
+++ b/app/src/main/res/layout/activity_new_wonjo_info.xml
@@ -19,7 +19,7 @@
         android:layout_height="wrap_content"
         android:text="@string/address_restaurant_Wonjo"
         android:textSize="24sp"
-        android:textColor="#FFFFFF"
+        android:textColor="@color/colorWhite"
         android:paddingBottom="8dp"
         android:paddingTop="8dp"
         android:paddingLeft="8dp"
@@ -34,7 +34,7 @@
             android:layout_height="wrap_content"
             android:text="@string/description_Wonjo"
             android:textSize="24sp"
-            android:textColor="#FFFFFF"
+            android:textColor="@color/colorWhite"
             android:paddingBottom="8dp"
             android:paddingTop="8dp"
             android:fontFamily="sans-serif"/>
