--- a/app/src/main/res/layout/activity_statue_liberty_info.xml
+++ b/app/src/main/res/layout/activity_statue_liberty_info.xml
@@ -19,7 +19,7 @@
         android:layout_height="match_parent"
         android:text="@string/description_Statue_Liberty"
         android:textSize="24sp"
-        android:textColor="#FFFFFF"
+        android:textColor="@color/colorWhite"
         android:paddingBottom="8dp"
         android:paddingTop="8dp"
         android:paddingLeft="8dp"
